@@ -14,8 +14,9 @@ import com.fasterxml.jackson.core.JsonGenerator;
 import com.fasterxml.jackson.databind.SerializerProvider;
 
 import java.io.IOException;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Optional;
 
 import static com.farao_community.farao.data.crac_io_json.JsonSerializationConstants.*;
 
@@ -43,8 +44,8 @@ public class InjectionRangeActionSerializer extends AbstractJsonSerializer<Injec
         gen.writeFieldName(NETWORK_ELEMENT_IDS_AND_KEYS);
         gen.writeStartObject();
         List<NetworkElement> sortedNetworkElementList = value.getInjectionDistributionKeys().keySet().stream()
-                .sorted(Comparator.comparing(NetworkElement::getId))
-                .collect(Collectors.toList());
+            .sorted(Comparator.comparing(NetworkElement::getId))
+            .toList();
         for (NetworkElement networkElement : sortedNetworkElementList) {
             gen.writeNumberField(networkElement.getId(), value.getInjectionDistributionKeys().get(networkElement));
         }
