@@ -18,7 +18,6 @@ import com.powsybl.commons.json.JsonUtil;
 import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static com.farao_community.farao.data.crac_io_json.JsonSerializationConstants.*;
 
@@ -54,8 +53,8 @@ public class VoltageCnecSerializer<I extends VoltageCnec> extends AbstractJsonSe
         gen.writeArrayFieldStart(THRESHOLDS);
         List<Threshold> sortedListOfThresholds = voltageCnec.getThresholds().stream()
             .sorted(new ThresholdComparator())
-            .collect(Collectors.toList());
-        for (Threshold threshold: sortedListOfThresholds) {
+            .toList();
+        for (Threshold threshold : sortedListOfThresholds) {
             gen.writeObject(threshold);
         }
         gen.writeEndArray();
